--- a/coursesAndsemester.html
+++ b/coursesAndsemester.html
@@ -53,69 +53,68 @@
     <div id="Bvoc-sem-1" class="section">
         <h3>Bvoc Semester 1 Subjects</h3>
         <ul>
-            <a href="year1.html"><li>ENGLISH A01</li></a>
-            <a href=""><li>ENGLISH A02</li></a>
-            <a href=""><li>COMPUTER FUNDAMENTALS</li></a>
-            <a href=""><li>MALAYALAM A07</li></a>
-            <a href=""><li>HINDI A07</li></a>
-            <a href=""><li>INTRODUCTION TO ADOBE ILLUSTRATOR & PHOTOSHOP</li></a>
-            <a href=""><LI>BASICS OF HTML</LI></a>
-            <a href=""><LI>GRAPHICS LAB</LI></a>
-            <a href=""><LI>HTML LAB</LI></a>
+            <a href="#"><li>ENGLISH A01</li></a>
+            <a href="#"><li>ENGLISH A02</li></a>
+            <a href="CF.PDF"><li>COMPUTER FUNDAMENTALS</li></a>
+            <a href="#"><li>MALAYALAM A07</li></a>
+            <a href="#"><li>HINDI A07</li></a>
+            <a href="adobe.pdf"><li>INTRODUCTION TO ADOBE ILLUSTRATOR & PHOTOSHOP</li></a>
+            <a href="Basics of HTML.pdf"><LI>BASICS OF HTML</LI></a>
+            <a href="adobe lab.pdf"><LI>GRAPHICS LAB</LI></a>
+            <a href="HTML Lab.pdf"><LI>HTML LAB</LI></a>
         </ul>
     </div>
     <div id="Bvoc-sem-2" class="section">
         <h3>Bvoc Semester 2 Subjects</h3>
         <ul>
-            <a href=""><li>ENGLISH A03</li></a>
-            <a href=""><li>ENGLISH A04</li></a>
-            <a href=""><li>HINDI A08</li></a>
-            <a href=""><li>MALAYALAM A08</li></a>
-            <a href=""><li>THEORY OF DOMAIN HOSTING</li></a>
-            <a href=""><li>INTRODUCTION TO BOOTSTRAP</li></a>
-            <a href=""><LI>ADVANCED HTML & CSS</LI></a>
-            <a href=""><LI>ADVANCED HTML & BOOTSTRAP LAB</LI></a>
-            <a href=""><LI>MINI PROJECT/INTERNSHIP</LI></a>
+            <a href="#"><li>ENGLISH A03</li></a>
+            <a href="#"><li>ENGLISH A04</li></a>
+            <a href="#"><li>HINDI A08</li></a>
+            <a href="#"><li>MALAYALAM A08</li></a>
+            <a href="Theory of Domain.pdf"><li>THEORY OF DOMAIN HOSTING</li></a>
+            <a href="Introduction to BootStrap.pdf"><li>INTRODUCTION TO BOOTSTRAP</li></a>
+            <a href="Advanced HTML and CSS.pdf"><LI>ADVANCED HTML & CSS</LI></a>
+            <a href="Advanced HTML and BootStrap Lab.pdf"><LI>ADVANCED HTML & BOOTSTRAP LAB</LI></a>
+            <a href="MiniProject intership.pdf"><LI>MINI PROJECT/INTERNSHIP</LI></a>
         </ul>
     </div>
     <div id="Bvoc-sem-3" class="section">
         <h3>Bvoc Semester 3 Subjects</h3>
         <ul>
-            <a href=""><li>RDBMS USING MYSQL</li></a>
-            <a href=""><li>BASIC MATHEMATICS FOR COMPETATIVE EXAMS</li></a>
-            <a href=""><li>BETTER SKILLS FOR BUISNESS AND PROFESSION</li></a>
-            <a href=""><li>THEORY OF VERSION CONTROL</li></a>
-            <a href=""><li>WEB PROGRAMMING USING PHP</li></a>
-            <a href=""><li>CLIENT SIDE SCRIPTING USING JAVA SCCRIPT</li></a>
-            <a href=""><LI>PHP LAB</LI></a>
-            <a href=""><LI>SQL LAB</LI></a>
+            <a href="RDBMS using MY SQL.pdf"><li>RDBMS USING MYSQL</li></a>
+            <a href="All Basic Mathematics and General Awareness.pdf"><li>BASIC MATHEMATICS FOR COMPETATIVE EXAMS</li></a>
+            <a href="Professional Business Skills"><li>BETTER SKILLS FOR BUISNESS AND PROFESSION</li></a>
+            <a href="Theory of Version Control.pdf"><li>THEORY OF VERSION CONTROL</li></a>
+            <a href="Web Programming Using PHP.pdf"><li>WEB PROGRAMMING USING PHP</li></a>
+            <a href="js.pdf"><li>CLIENT SIDE SCRIPTING USING JAVA SCCRIPT</li></a>
+            <a href="PHP Lab"><LI>PHP LAB</LI></a>
+            <a href="SQL Lab"><LI>SQL LAB</LI></a>
         </ul>
     </div>
     <div id="Bvoc-sem-4" class="section">
         <h3>Bvoc Semester 4 Subjects</h3>
         <ul>
-           <a href=""> <li>ENTERPRENEURSHIP DEVELOPMENT</li></a>
-            <a href=""><li>HEAILTH AND SAFETY AT WORKPLACE</li></a>
-            <a href=""><li>INTRODUCTION TO XML</li></a>
-            <a href=""><li>FUNDAMENTALS OF AUDIO,VIDEO AND MULTIMEDIA</li></a>
-           <a href=""> <li>SCRIPTING USING PYTHON</li></a>
-           <a href=""> <li>WEB SERVER PROGRAMMING USING DJANGO</li></a>
-            <a href=""><LI>PYTHON SCRIPTING LAB</LI></a>
-            <a href=""><LI>MINI PROJECT/INTERNSHIP</LI></a>
+           <a href="Entrepreneurship Development"><li>ENTERPRENEURSHIP DEVELOPMENT</li></a>
+            <a href="Public Health"><li>HEAILTH AND SAFETY AT WORKPLACE</li></a>
+            <a href="Introduction to XML.pdf"><li>INTRODUCTION TO XML</li></a>
+            <a href="Fundamentals of Audio.pdf"><li>FUNDAMENTALS OF AUDIO,VIDEO AND MULTIMEDIA</li></a>
+           <a href="Scripting using Python.pdf"><li>SCRIPTING USING PYTHON</li></a>
+           <a href="Web Server Programming using Django.pdf"> <li>WEB SERVER PROGRAMMING USING DJANGO</li></a>
+            <a href="Python Scripting Lab.pdf"><LI>PYTHON SCRIPTING LAB</LI></a>
+            <a href="4th MiniProjec.pdf"><LI>MINI PROJECT/INTERNSHIP</LI></a>
         </ul>
     </div>
     <div id="Bvoc-sem-5" class="section">
         <h3>Bvoc Semester 5 Subjects</h3>
         <ul>
-           <a href=""> <li>INTRODUCTION TO SEARCH ENGINE OPTIMIZATION</li></a>
-            <a href=""><li>QUALITY ASSURANCE IN SOFTWARE</li></a>
-            <a href=""><li>CONTENT MANGEMENT SYSTEM</li></a>
-            <a href=""><li>INTRODUCTION TO CROSS PLATFORM WEBSITE APPLICATIONS</li></a>
-            <a href=""><li>Software Engineering</li></a>
-           <a href=""> <li>RUBY ON RAILS</li></a>
-            <a href=""><LI>CROSS PLATFORM WEBSITE LAB</LI></a>
-            <a href=""><LI>RUBY LAB</LI></a>
-            <a href=""><LI>CONTENT MANAGEMENT SYSTEM LAB</LI></a>
+           <a href="Introduction to Search Engine Optimization.pdf"><li>INTRODUCTION TO SEARCH ENGINE OPTIMIZATION</li></a>
+            <a href="Quality Assurance in Software.pdf"><li>QUALITY ASSURANCE IN SOFTWARE</li></a>
+            <a href="Content Management System.pdf"><li>CONTENT MANGEMENT SYSTEM</li></a>
+            <a href="Introduction to Cross Platform Website Applications.pdf"><li>INTRODUCTION TO CROSS PLATFORM WEBSITE APPLICATIONS</li></a>
+           <a href="Ruby on Rails.pdf"><li>RUBY ON RAILS</li></a>
+            <a href="Cross Platform Website Lab.pdf"><LI>CROSS PLATFORM WEBSITE LAB</LI></a>
+            <a href="Ruby Lab.pdf"><LI>RUBY LAB</LI></a>
+            <a href="Content Management System Lab.pdf"><LI>CONTENT MANAGEMENT SYSTEM LAB</LI></a>
         </ul>
     </div>
     <div id="Bvoc-sem-6" class="section">
